[package]
name = "api-roll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rand = "0.8.5"
rdkafka = { version = "0.28.0", features = [ "ssl", "sasl", "gssapi-vendored", "ssl-vendored"] }
sasl2-sys = { version = "*", features = [ "vendored" ] }
#sasl2-sys = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = "1.0.126"
derive_more = "0.99.16"
env_logger = "0.9.1"
